# Tests

./: .gitignore  README.md
Baza_znaniy/: Agents.md
Baza_znaniy/src/: Dockerfile  Dockerfile.mcp  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test_ask.py  test_integration.py  test_small.py  test_split.py  test_text_source.py
Baza_znaniy/src/migrations/: env.py
Playwright-cli/: main.py  pyproject.toml  run-auth.js  test-auth.js  ТЗ.md
Playwright-cli/antigravity/: antigravity_docs_full.md
Playwright-cli/antigravity/parsed_pages/: 01_https___antigravity_google_docs_home.md  02_Getting_Started.md  04_https___antigravity_google_docs_models.md  05_https___antigravity_google_docs_agent-modes-settings.md  06_https___antigravity_google_docs_rules-workflows.md  07_https___antigravity_google_docs_skills.md  10_https___antigravity_google_docs_strict-mode.md  12_https___antigravity_google_docs_mcp.md  13_https___antigravity_google_docs_artifacts.md  15_https___antigravity_google_docs_implementation-plan.md  19_https___antigravity_google_docs_knowledge.md  20_https___antigravity_google_docs_editor.md  21_https___antigravity_google_docs_tab.md  23_https___antigravity_google_docs_agent-side-panel.md  24_https___antigravity_google_docs_review-changes-editor.md  25_https___antigravity_google_docs_agent-manager.md  27_https___antigravity_google_docs_playground.md  29_https___antigravity_google_docs_conversation-view.md  31_https___antigravity_google_docs_panes.md  33_https___antigravity_google_docs_changes-sidebar.md  35_https___antigravity_google_docs_files.md  (+2 more)
(+1012 files in other folders)
